issues with alignment of text & graphics but smooth scrolling

--- a/src/css/project.less
+++ b/src/css/project.less
@@ -16,8 +16,8 @@
 
 .scrolly-text-container {
 	display: inline-block;
-	max-width: 542px;
-	margin-left: 465px;
+	max-width: 532px;
+	margin-left: 475px;
 }
 
 .text {
